--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="shoe_size_lbl">Shoe Size</string>
     <string name="company_lbl">Company</string>
     <string name="shoe_name_lbl">Shoe Name</string>
+    <string name="login_fragment_title">login</string>
+    <string name="welcome_fragment_title">Welcome</string>
+    <string name="instructions_fragment_title">Instructions</string>
+    <string name="shoe_list_fragment_title">Shoe List</string>
+    <string name="details_fragment_title">Shoe Details</string>
 </resources>
