--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="email">email</string>
-    <string name="password">password</string>
     <string name="login">Login</string>
     <string name="password_label">Password</string>
     <string name="email_label">Email</string>
@@ -29,9 +25,12 @@
     <string name="shoe_size_lbl">Shoe Size</string>
     <string name="company_lbl">Company</string>
     <string name="shoe_name_lbl">Shoe Name</string>
-    <string name="login_fragment_title">login</string>
+    <string name="login_fragment_title">Login</string>
     <string name="welcome_fragment_title">Welcome</string>
     <string name="instructions_fragment_title">Instructions</string>
     <string name="shoe_list_fragment_title">Shoe List</string>
     <string name="details_fragment_title">Shoe Details</string>
+    <string name="password_hint">123456</string>
+    <string name="email_hint">user@example.com</string>
+
 </resources>
