Added animations and Capitalized fragments' labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,11 @@
     <string name="shoe_size_lbl">Shoe Size</string>
     <string name="shoe_company_lbl">Company</string>
     <string name="shoe_name_lbl">Shoe Name</string>
-    <string name="login_fragment_title">Login</string>
-    <string name="welcome_fragment_title">Welcome</string>
-    <string name="instructions_fragment_title">Instructions</string>
-    <string name="shoe_list_fragment_title">Shoe List</string>
-    <string name="details_fragment_title">Shoe Details</string>
+    <string name="login_fragment_title">LOGIN</string>
+    <string name="welcome_fragment_title">WELCOME</string>
+    <string name="instructions_fragment_title">INSTRUCTIONS</string>
+    <string name="shoe_list_fragment_title">SHOE LIST</string>
+    <string name="details_fragment_title">SHOE DETAILS</string>
     <string name="password_hint">123456</string>
     <string name="email_hint">user@example.com</string>
     <!--    <string name="incorrect_size_error">valid sizes between %d and %d only</string>-->
